@@ -1,4 +1,4 @@
 #!/usr/bin/env python
 # -*- coding: utf-8 -*-
-__version__ = "4.2.0b2"
+__version__ = "4.2.0b3"
 __author__ = "Chris Griffith"
