@@ -176,15 +176,15 @@ class Main(QtWidgets.QWidget):
         self.grid = QtWidgets.QGridLayout()
 
         self.grid.addLayout(self.init_top_bar(), 0, 0, 1, 14)
-        self.grid.addLayout(self.init_video_area(), 1, 0, 6, 6)
-        self.grid.addLayout(self.init_scale_and_crop(), 1, 6, 6, 4)
-        self.grid.addWidget(self.init_preview_image(), 1, 10, 5, 4, (QtCore.Qt.AlignTop | QtCore.Qt.AlignRight))
-        self.grid.addLayout(self.init_thumb_time_selector(), 6, 10, 1, 4, (QtCore.Qt.AlignTop | QtCore.Qt.AlignRight))
+        self.grid.addLayout(self.init_video_area(), 2, 0, 6, 6)
+        self.grid.addLayout(self.init_scale_and_crop(), 2, 6, 6, 4)
+        self.grid.addWidget(self.init_preview_image(), 2, 10, 5, 4, (QtCore.Qt.AlignTop | QtCore.Qt.AlignRight))
+        self.grid.addLayout(self.init_thumb_time_selector(), 7, 10, 1, 4, (QtCore.Qt.AlignTop | QtCore.Qt.AlignRight))
 
         spacer = QtWidgets.QLabel()
         spacer.setFixedHeight(5)
-        self.grid.addWidget(spacer, 7, 0, 1, 14)
-        self.grid.addWidget(self.video_options, 8, 0, 10, 14)
+        self.grid.addWidget(spacer, 8, 0, 1, 14)
+        self.grid.addWidget(self.video_options, 9, 0, 10, 14)
 
         self.grid.setSpacing(5)
         self.paused = False
@@ -498,6 +498,7 @@ class Main(QtWidgets.QWidget):
         layout = QtWidgets.QHBoxLayout()
         self.widgets.convert_to = QtWidgets.QComboBox()
         self.widgets.convert_to.setMinimumWidth(180)
+        self.widgets.convert_to.setFixedHeight(40)
         self.change_output_types()
         self.widgets.convert_to.currentTextChanged.connect(self.change_encoder)
 
@@ -1700,16 +1701,20 @@ class Main(QtWidgets.QWidget):
 
     @reusables.log_exception("fastflix", show_traceback=False)
     def conversion_cancelled(self, data):
+        self.converting = False
+        self.set_convert_button()
+
         if not data:
             return
 
         try:
             video_uuid, *_ = data.split("|")
             cancelled_video = self.find_video(video_uuid)
+            exists = cancelled_video.video_settings.output_path.exists()
         except Exception:
             return
 
-        if cancelled_video.video_settings.output_path.exists():
+        if exists:
             sm = QtWidgets.QMessageBox()
             sm.setWindowTitle(t("Cancelled"))
             sm.setText(
@@ -1725,9 +1730,6 @@ class Main(QtWidgets.QWidget):
                     cancelled_video.video_settings.output_path.unlink(missing_ok=True)
                 except OSError:
                     pass
-
-        self.converting = False
-        self.set_convert_button()
 
     @reusables.log_exception("fastflix", show_traceback=True)
     def dropEvent(self, event):
