@@ -1,15 +1,15 @@
-appdirs
-colorama
-coloredlogs
-iso639-lang
-mistune
-pathvalidate
-psutil
-pydantic
+appdirs==1.4.4
+colorama==0.4.4
+coloredlogs==15.0
+iso639-lang==0.0.9
+mistune==0.8.4
+pathvalidate==2.3.2
+psutil==5.8.0
+pydantic==1.8.1
 pyinstaller==4.2
-pyqt5
-python-box
-qtpy
-requests
-reusables
+pyqt5==5.15.3
+python-box==5.3.0
+qtpy==1.9.0
+requests==2.25.1
+reusables==0.9.6
 ruamel.yaml<0.16
